--- a/inicio.html
+++ b/inicio.html
@@ -23,6 +23,60 @@
             margin: 0;
             font-family: 'Quicksand', sans-serif;
         }
+        .cards-container{
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 240px);
+            gap: 26px;
+            place-content: center;
+        }
+        .product-cart{
+            width: 240px;
+        }
+        .product-cart img{
+            width: 240px;
+            height: 240px;
+            border-radius: 20px;
+            object-fit: cover; 
+        }
+        .product-info{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 12px;
+        }
+        .product-info figure{
+            margin: 0;
+        }
+        .product-info figure img{
+            width: 35px;
+            height: 35px;
+        }
+
+        .product-info div p:nth-child(1){
+            font-weight: bold;
+            font-size: var(--md);
+            margin-top: 0;
+            margin-bottom: 4px;
+        }
+        .product-info div p:nth-child(2){
+            font-size: var(--sm);
+            margin-top: 0;
+            margin-bottom: 0;
+            color: var(--very-light-pink);
+        }
+
+        @media (max-width: 640px){
+            .cards-container{
+                grid-template-columns: repeat(auto-fill, 140px);
+            }
+            .product-cart{
+                width: 140px;
+            }
+            .product-cart img{
+                width: 140px;
+                height: 140px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -30,44 +84,90 @@
         <div class="cards-container">
             <div class="product-cart">
                 <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
-                <div>
-                    <p>$120</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"./icons/bt_add_to_cart.svg" alt="">
-                </figure>
+            </div>
+
+            <div class="product-cart">
+                <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
             </div>
             <div class="product-cart">
                 <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
-                <div>
-                    <p>$120</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"./icons/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
             <div class="product-cart">
                 <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
-                <div>
-                    <p>$120</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"./icons/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
             <div class="product-cart">
                 <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
-                <div>
-                    <p>$120</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"./icons/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
+            <div class="product-cart">
+                <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-cart">
+                <img src="https://images.pexels.com/photos/5914907/pexels-photo-5914907.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div>
+            
         </div>
     </section>
 </body>
